tests/rosetta/out/Smalltalk/aks-test-for-primes.out
/tmp/aks-test-for-primes.st:10: parse error, expected ']'
